hungarian translation update
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42135 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-lib/hu.po
+++ b/po/wesnoth-lib/hu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: hu-lib_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-04-03 12:26+0200\n"
+"PO-Revision-Date: 2010-04-13 21:13+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
@@ -1859,6 +1859,8 @@ msgstr "Ne animálja a számítógép lépéseit"
 #: src/game_preferences_display.cpp:341
 msgid "Sighting an allied unit interrupts your unit's movement"
 msgstr ""
+"Ha egy szövetséges egység kerül látótávolságba, az egységed mozgása "
+"félbeszakad."
 
 #: src/game_preferences_display.cpp:349
 msgid "Overlay a grid onto the map"
