--- a/po/wesnoth-low/hu.po
+++ b/po/wesnoth-low/hu.po
@@ -2,20 +2,21 @@
 # Fábián Balázs <nermal93@freemail.hu>, 2008.
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>, 2008., 2009.
 # Gabor Udvari <gabor.udvari@gmail.com>, 2008.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-low_1.5(frozen)\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2009-10-08 09:52+0100\n"
-"Last-Translator: Kelemen Zoltán <kelemen_zoltan@freemail.hu>\n"
+"POT-Creation-Date: 2010-04-12 13:09+0200\n"
+"PO-Revision-Date: 2010-04-13 21:14+0200\n"
+"Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,527,-1,-1\n"
-"X-Generator: Lokalize 0.3\n"
+"X-Generator: Lokalize 1.0\n"
 
 #. [campaign]: id=LOW
 #: data/campaigns/Legend_of_Wesmere/_main.cfg:67
@@ -1080,7 +1081,6 @@ msgstr ""
 
 #. [message]: id=Galtrid
 #: data/campaigns/Legend_of_Wesmere/scenarios/03_Kalian.cfg:877
-#, fuzzy
 msgid ""
 "What 'stone', foul and clumsy orc? Your lips are not fit even to name the "
 "citadel of the Ka'lian, for it has stood since before your kind crawled into "
