--- a/po/wesnoth/hu.po
+++ b/po/wesnoth/hu.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: hu-wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-04-06 19:43+0200\n"
+"PO-Revision-Date: 2010-04-13 21:18+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
@@ -103,15 +103,13 @@ msgstr "Hangok engedélyezése a játékcsarnokban"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Többjátékos"
+msgstr "Alapértelmezett MI"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Többjátékos"
+msgstr "RCA MI"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
