--- a/po/wesnoth-lib/sk.po
+++ b/po/wesnoth-lib/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-04-11 17:51+0100\n"
+"PO-Revision-Date: 2010-04-15 22:12+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -1851,7 +1851,7 @@ msgstr "Nekresli pohyb jednotiek počítača"
 
 #: src/game_preferences_display.cpp:341
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Zahliadnutie spojeneckej jednotky preruší pohyb tvojej jednotky"
 
 #: src/game_preferences_display.cpp:349
 msgid "Overlay a grid onto the map"
