French translation update
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42145 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-lib/fr.po
+++ b/po/wesnoth-lib/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-04-11 09:45+0100\n"
+"PO-Revision-Date: 2010-04-12 17:43+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "MIME-Version: 1.0\n"
@@ -1861,7 +1861,7 @@ msgstr "Ne pas animer les déplacements des unités de l'ordinateur"
 
 #: src/game_preferences_display.cpp:341
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Découvrir une unité alliée interrompt le mouvement de votre unité"
 
 #: src/game_preferences_display.cpp:349
 msgid "Overlay a grid onto the map"
