--- a/po/wesnoth-sotbe/fr.po
+++ b/po/wesnoth-sotbe/fr.po
@@ -11,9 +11,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2009-07-17 19:10+0100\n"
-"Last-Translator: Damien <guydelatourATgloireetpouvoir.com>\n"
+"POT-Creation-Date: 2010-04-12 13:09+0200\n"
+"PO-Revision-Date: 2010-04-13 09:58+0100\n"
+"Last-Translator: Guigou <guillaume.guigou@cnfpt.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1740,7 +1740,6 @@ msgstr "Est-ce que les chamans sont en sécurité ?"
 
 #. [message]: speaker=Affman
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/06_Black_Flag.cfg:294
-#, fuzzy
 msgid ""
 "When we realized that there was no way we could hold the humans off, we sent "
 "them east to a place near the Mourned Hills along with most of our women and "
@@ -2183,7 +2182,6 @@ msgstr ""
 
 #. [message]: speaker=Gork
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:165
-#, fuzzy
 msgid ""
 "It has not always been like this. A lot of hunters from the tribes used to "
 "hunt here and fish in the River Bork. But that all changed a few years ago. "
@@ -2256,7 +2254,7 @@ msgstr ""
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:223
 msgid "Now we're going to have some some answers out of you."
-msgstr ""
+msgstr "Maintenant, tu va nous donner quelques réponses."
 
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:228
@@ -2337,15 +2335,13 @@ msgstr ""
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:279
-#, fuzzy
 msgid "With pleasure. But what should I do with this weakling?"
-msgstr "Avec plaisir. Mais que dois-je faire avec ce type ?"
+msgstr "Avec plaisir. Mais que dois-je faire avec cette mauviette ?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:284
-#, fuzzy
 msgid "Behead it."
-msgstr "Coupe-lui la tête. "
+msgstr "Décapite le."
 
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:289
@@ -2665,7 +2661,6 @@ msgstr "Tour méridionale"
 
 #. [message]: speaker=Plonk
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:178
-#, fuzzy
 msgid ""
 "Reinforcements, at last! Whoever you are, you are welcome in Prestim! The "
 "fortified bridge over the River Bork was taken this morning by a small "
@@ -3108,9 +3103,8 @@ msgstr "Dent pour dent"
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:44
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_Coward.cfg:40
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:32
-#, fuzzy
 msgid "Death of Al'Brock"
-msgstr "Al'Brock"
+msgstr "Mort d'Al'Brock"
 
 #. [objective]: condition=lose
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:37
@@ -3120,9 +3114,8 @@ msgstr "Al'Brock"
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:48
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/16_Coward.cfg:44
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:36
-#, fuzzy
 msgid "Death of Flar'Tar"
-msgstr "Mort d'Inarix"
+msgstr "Mort de Flar'Tar"
 
 #. [objectives]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/12_Giving_Some_Back.cfg:45
@@ -3271,9 +3264,8 @@ msgstr "Le Baroud des nains"
 
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:87
-#, fuzzy
 msgid "Sagmar"
-msgstr "Sam"
+msgstr "Sagmar"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:98
@@ -3286,7 +3278,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:103
-#, fuzzy
 msgid ""
 "After a few weeks of putting down minor rebellions and clearing out the last "
 "human strongholds, the first snows of the long northern winter began to "
@@ -3297,9 +3288,9 @@ msgstr ""
 "Après quelques semaines passées à mater des rebellions mineures et à balayer "
 "les dernières poches de résistance humaine, les premières neiges du long "
 "hiver boréal se mirent à tomber. Quelques jours après les premières chutes "
-"de neige, un cavalier gobelin à moitié mort de fatigue entra au galop dans "
-"Dorset : Borstep était assiégée par une grande force composée de nains, de "
-"hors-la-loi et d'elfes."
+"de neige, un cavalier gobelin - à moitié mort de fatigue - entra au galop "
+"dans Dorset : Borstep était assiégée par une grande force composée de nains, "
+"de hors-la-loi et d'elfes."
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:108
@@ -3331,7 +3322,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:118
-#, fuzzy
 msgid ""
 "Rushing to reach Borstep before the river froze up for the winter, the orcs "
 "sailed up the River Bork. Paddling day and night the horde barely managed to "
@@ -3758,13 +3748,11 @@ msgstr "Pas du tout. Leurs corps sont gelés dans le lac juste en dessous."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:654
-#, fuzzy
 msgid "We had better go look."
-msgstr "Vous feriez mieux d'aller voir."
+msgstr "Nous ferions mieux d'aller voir."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/14_Back_Home.cfg:660
-#, fuzzy
 msgid "You had better go look."
 msgstr "Vous feriez mieux d'aller voir."
 
@@ -3973,7 +3961,6 @@ msgstr "Bien reçu !"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/15_Civil_War.cfg:234
-#, fuzzy
 msgid ""
 "It's been a chilly winter. How about we warm ourselves up a bit by giving "
 "these traitors a good whupping, boys?"
@@ -4336,7 +4323,6 @@ msgstr "Attendez ! Qu'est-ce qu'il se passe ici ? "
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:679
-#, fuzzy
 msgid ""
 "Howgarth? You and your interfering alliance always show up at the worst "
 "possible time."
