updated Polish translation
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42190 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-lib/pl.po
+++ b/po/wesnoth-lib/pl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: pl\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2009-11-14 13:41+0100\n"
+"PO-Revision-Date: 2010-04-19 21:01+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team:  <z.banach@wsisiz.edu.pl>\n"
 "MIME-Version: 1.0\n"
@@ -1856,7 +1856,7 @@ msgstr "Nie animuj ruchu jednostek komputera"
 
 #: src/game_preferences_display.cpp:341
 msgid "Sighting an allied unit interrupts your unit's movement"
-msgstr ""
+msgstr "Dostrzeżenie jednostki sojusznika przerywa ruch twojej jednostki"
 
 #: src/game_preferences_display.cpp:349
 msgid "Overlay a grid onto the map"
@@ -2176,11 +2176,11 @@ msgstr "Dołączono do pokoju $name"
 
 #: src/gui/dialogs/lobby_main.cpp:1400
 msgid "$player has entered the room"
-msgstr ""
+msgstr "Gracz $player wszedł do pokoju"
 
 #: src/gui/dialogs/lobby_main.cpp:1438
 msgid "$player has left the room"
-msgstr ""
+msgstr "Gracz $player opuścił pokój"
 
 #: src/gui/dialogs/lobby_main.cpp:1551
 msgid "Password Required"
