--- a/po/wesnoth-sotbe/pl.po
+++ b/po/wesnoth-sotbe/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.5-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2009-11-10 13:58+0100\n"
+"PO-Revision-Date: 2010-04-11 12:52+0100\n"
 "Last-Translator: Zbigniew Banach <z.banach@wsisiz.edu.pl>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -3189,9 +3189,8 @@ msgstr "Opór krasnoludów"
 
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:87
-#, fuzzy
 msgid "Sagmar"
-msgstr "Sam"
+msgstr "Sagmar"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:98
@@ -4234,13 +4233,12 @@ msgstr "Stać! Co tu się dzieje, na miłość pięknego zielonego świata?"
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:679
-#, fuzzy
 msgid ""
 "Howgarth? You and your interfering alliance always show up at the worst "
 "possible time."
 msgstr ""
-" Howgarth? Zawsze się pojawiasz w najgorszym momencie z tym swoim "
-"upierdliwym Sojuszem."
+"Howgarth? Zawsze się pojawiasz w najgorszym momencie z tym swoim upierdliwym "
+"Sojuszem."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:684
