--- a/po/wesnoth-sof/ja.po
+++ b/po/wesnoth-sof/ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: wesnoth 1.7.x-SVN\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-10 12:33+0200\n"
-"PO-Revision-Date: 2010-03-13 03:09+0900\n"
+"PO-Revision-Date: 2010-04-20 06:23+0900\n"
 "Last-Translator: np <tukiplus@gmail.com>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -568,13 +568,13 @@ msgstr "荷物を降ろしました。"
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:470
 msgid "You only need $incominggold more, then you can begin work."
-msgstr "あなたは仕事を始めるために、より多くの収入を必要としている。"
+msgstr "あなたは仕事を始めるために、$incominggold 以上を必要としている。"
 
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:476
 msgid ""
 "You only need $incominggold more, and the stone, then you can begin work."
-msgstr "あなたは、より多くの収入と、石を必要としている"
+msgstr "あなたは仕事を始めるために、$incominggold 以上と石を必要としている。"
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:490
