--- a/po/wesnoth/ja.po
+++ b/po/wesnoth/ja.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.8-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-03-30 22:14+0900\n"
+"PO-Revision-Date: 2010-04-20 06:33+0900\n"
 "Last-Translator: \n"
 "Language-Team: Japanese Translation Team\n"
 "MIME-Version: 1.0\n"
@@ -7158,12 +7158,12 @@ msgstr "テレポートに失敗した！ 出口が空いていなかった"
 #: src/actions.cpp:2538
 msgid "Friendly unit sighted"
 msgid_plural "$friends friendly units sighted"
-msgstr[0] "味方ユニット発見"
+msgstr[0] "味方ユニット発見 $friends"
 
 #: src/actions.cpp:2541
 msgid "Enemy unit sighted!"
 msgid_plural "$enemies enemy units sighted!"
-msgstr[0] "敵ユニット発見！"
+msgstr[0] "敵ユニット発見！$enemies"
 
 #: src/actions.cpp:2546
 msgid "Part of 'Units sighted! (...)' sentence^1 friendly"
