--- a/po/wesnoth/gl.po
+++ b/po/wesnoth/gl.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-20 11:32+0200\n"
-"PO-Revision-Date: 2010-04-18 00:20+0200\n"
+"PO-Revision-Date: 2010-04-21 11:18+0200\n"
 "Last-Translator: Adrián Chaves Fernández <adriyetichaves@gmail.com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
 "MIME-Version: 1.0\n"
@@ -1019,9 +1019,9 @@ msgid ""
 "a move in a village you don't already own will also use up a unit's "
 "movement, but will still allow it to attack."
 msgstr ""
-"O movemento no Battle for Wesnoth é sinxelo. Preme na unidade que "
-"queresmover para seleccionala, logo preme no hexágono ao que queres movela. "
-"Ao seleccionar unha unidade, saliéntanse todos os hexágonos aos que se pode "
+"O movemento no Battle for Wesnoth é sinxelo. Preme na unidade que queiras "
+"mover para seleccionala, logo preme no hexágono ao que queres movela. Ao "
+"seleccionar unha unidade, saliéntanse todos os hexágonos aos que se pode "
 "mover nesa quenda, e escurécense o resto dos hexágonos. Poñendo o rato "
 "enriba dun hexágono salientado amósase a taxa de defensa que tería a unidade "
 "se a moveses alí. Se pos o rato enriba dun hexágono escurecido amosarase "
@@ -3984,8 +3984,8 @@ msgid ""
 "Sprinkling this water on melee weapons grants them the 'arcane' damage type "
 "until the end of the current scenario. Should $unit.name use it?"
 msgstr ""
-"Esta auga fará que as armas corpo a corpo inflixan dano “arcano” ata o final "
-"do escenario actual. Queres que $unit.name o utilice?"
+"Bañar as armas corpo a corpo con esta auga fará que inflixan dano de tipo "
+"“arcano” ata o final do escenario actual. Queres que $unit.name a utilice?"
 
 # Procurei que a mensaxe fose unisex.
 #: data/core/macros/items.cfg:288
@@ -4003,8 +4003,8 @@ msgid ""
 "This water will make melee weapons have the 'arcane' damage type until the "
 "end of the current scenario."
 msgstr ""
-"Esta auga fará que as armas corpo a corpo inflixan “arcano” ata o final do "
-"escenario actual."
+"Esta auga fará que as armas corpo a corpo inflixan dano de tipo “arcano” ata "
+"o final do escenario actual."
 
 #. [object]: id={ID}
 #: data/core/macros/items.cfg:322
@@ -4924,7 +4924,7 @@ msgid ""
 " Spirits have very unusual resistances to damage, and move quite slowly over "
 "open water."
 msgstr ""
-" Os espíritos teñen unhas resistencias pouco habituais ao dano, e móvense "
+" os espíritos teñen unhas resistencias pouco habituais ao dano, e móvense "
 "moi lentamente sobre a auga aberta."
 
 #: data/core/macros/special-notes.cfg:11
@@ -4932,18 +4932,18 @@ msgid ""
 " This unit's arcane attack deals tremendous damage to magical creatures, and "
 "even some to mundane creatures."
 msgstr ""
-" O ataque arcano desta unidade inflixe un tremendo dano ás criaturas "
+" o ataque arcano desta unidade inflixe un tremendo dano ás criaturas "
 "máxicas, e algún tamén ás criaturas mundanas."
 
 #: data/core/macros/special-notes.cfg:14
 msgid " This unit is capable of basic healing."
-msgstr " Esta unidade ten unha habilidade básica para sandar."
+msgstr " esta unidade ten unha habilidade básica para sandar."
 
 #: data/core/macros/special-notes.cfg:17
 msgid ""
 " This unit is capable of healing those around it, and curing them of poison."
 msgstr ""
-" Esta unidade ten a capacidade de sandar a todos os que a rodean, e curalos "
+" esta unidade ten a capacidade de sandar a todos os que a rodean, e curalos "
 "do veleno."
 
 #: data/core/macros/special-notes.cfg:20
@@ -4951,7 +4951,7 @@ msgid ""
 " This unit is capable of neutralizing the effects of poison in units around "
 "it."
 msgstr ""
-" Esta unidade é capaz de neutralizar os efectos do veleno nas unidades que "
+" esta unidade é capaz de neutralizar os efectos do veleno nas unidades que "
 "están arredor dela."
 
 #: data/core/macros/special-notes.cfg:23
@@ -4959,14 +4959,14 @@ msgid ""
 " This unit regenerates, which allows it to heal as though always stationed "
 "in a village."
 msgstr ""
-" Esta unidade rexenera, o que lle permite sandar coma se estivera nunha vila."
+" esta unidade rexenera, o que lle permite sandar coma se estivera nunha vila."
 
 #: data/core/macros/special-notes.cfg:26
 msgid ""
 " The steadiness of this unit reduces damage from some attacks, but only "
 "while defending."
 msgstr ""
-" A firmeza desta unidade reduce o dano dalgúns ataques, pero só ao "
+" a firmeza desta unidade reduce o dano dalgúns ataques, pero só ao "
 "defenderse."
 
 #: data/core/macros/special-notes.cfg:29
@@ -4974,7 +4974,7 @@ msgid ""
 " The leadership of this unit enables adjacent units of the same side to deal "
 "more damage in combat, though this only applies to units of lower level."
 msgstr ""
-" O liderado desta unidade permítelle ás unidades adxacentes do mesmo bando "
+" o liderado desta unidade permítelle ás unidades adxacentes do mesmo bando "
 "inflixir máis dano no combate, aínda que isto só afecte ás unidades de nivel "
 "inferior."
 
@@ -4983,19 +4983,19 @@ msgid ""
 " This unit's skill at skirmishing allows it to ignore enemies' zones of "
 "control and thus move unhindered around them."
 msgstr ""
-" A habilidade para a guerrilla desta unidade permítelle ignorar as zonas de "
+" a habilidade para a guerrilla desta unidade permítelle ignorar as zonas de "
 "control dos inimigos, podendo así moverse libremente arredor deles."
 
 #: data/core/macros/special-notes.cfg:35
 msgid " Illumination increases the lighting level in adjacent areas."
-msgstr " A iluminación incrementa o nivel de luz en zonas adxacentes."
+msgstr " a iluminación incrementa o nivel de luz en zonas adxacentes."
 
 #: data/core/macros/special-notes.cfg:38
 msgid ""
 " This unit can use one move to teleport between any two empty villages "
 "controlled by its side."
 msgstr ""
-" Esta unidade pode usar un dos seus movementos para teleportarse entre dúas "
+" esta unidade pode usar un dos seus movementos para teleportarse entre dúas "
 "vilas baleiras calquera controladas polo seu bando."
 
 #: data/core/macros/special-notes.cfg:41
@@ -5003,14 +5003,14 @@ msgid ""
 " In woodlands, this unit's ambush skill renders it invisible to enemies "
 "unless it is immediately adjacent or has revealed itself by attacking."
 msgstr ""
-" Nos bosques, a habilidade para emboscar desta unidade convértea en "
+" nos bosques, a habilidade para emboscar desta unidade convértea en "
 "invisible para os inimigos a non ser que estea xusto ao lado deles ou se "
 "revele atacándoos."
 
 #: data/core/macros/special-notes.cfg:44
 msgid " This unit is able to hide at night, leaving no trace of its presence."
 msgstr ""
-" Esta unidade é capaz de agocharse pola noite, sen deixar rastro da súa "
+" esta unidade é capaz de agocharse pola noite, sen deixar rastro da súa "
 "presencia."
 
 #: data/core/macros/special-notes.cfg:47
@@ -5018,14 +5018,14 @@ msgid ""
 " This unit can hide in villages (with the exception of water villages), and "
 "remain undetected by its enemies, except by those standing next to it."
 msgstr ""
-" Esta unidade pode agocharse nas vilas (a excepción das vilas somerxidas), e "
+" esta unidade pode agocharse nas vilas (a excepción das vilas somerxidas), e "
 "evitar ser detectada polos seus inimigos, agás polos que estean xunto a ela."
 
 #: data/core/macros/special-notes.cfg:50
 msgid ""
 " This unit can move unseen in deep water, requiring no air from the surface."
 msgstr ""
-" Esta unidade pode moverse na auga profunda sen ser vista, sen precisar aire "
+" esta unidade pode moverse na auga profunda sen ser vista, sen precisar aire "
 "da superficie."
 
 #: data/core/macros/special-notes.cfg:53
@@ -5033,7 +5033,7 @@ msgid ""
 " This unit gains 1 hitpoint added to its maximum whenever it kills a living "
 "unit."
 msgstr ""
-" Esta unidade aumenta a súa vida máxima nun punto cando mata a unha unidade "
+" esta unidade aumenta a súa vida máxima nun punto cando mata a unha unidade "
 "viva."
 
 #: data/core/macros/special-notes.cfg:56
@@ -5041,7 +5041,7 @@ msgid ""
 " Whenever its berserk attack is used, this unit continues to push the attack "
 "until either it or its enemy lies dead."
 msgstr ""
-" Cando se o seu ataque furioso, esta unidade continúa atacando ata que só un "
+" cando se o seu ataque furioso, esta unidade continúa atacando ata que só un "
 "dos combatentes quede en pe."
 
 #: data/core/macros/special-notes.cfg:59
@@ -5050,7 +5050,7 @@ msgid ""
 "attacking it, this unit may backstab, inflicting double damage by creeping "
 "around behind that enemy."
 msgstr ""
-" Se hai un inimigo do obxectivo no seu lado oposto mentres o ataca, esta "
+" se hai un inimigo do obxectivo no seu lado oposto mentres o ataca, esta "
 "unidade pode apuñalar ao obxectivo polas costas, inflixíndolle así o dobre "
 "de dano."
 
@@ -5059,7 +5059,7 @@ msgid ""
 " Foes who lose their life to the plague will rise again in unlife, unless "
 "they are standing on a village."
 msgstr ""
-" Os inimigos que perden a súa vida pola peste volverán coma non mortos, a "
+" os inimigos que perden a súa vida pola peste volverán coma non mortos, a "
 "non ser que permanezan nunha vila."
 
 #: data/core/macros/special-notes.cfg:65
@@ -5067,14 +5067,14 @@ msgid ""
 " This unit is able to slow its enemies, halving their movement speed and "
 "attack damage until they end a turn."
 msgstr ""
-" Esta unidade pode ralentizar aos seus inimigos, reducindo á metade a súa "
+" esta unidade pode ralentizar aos seus inimigos, reducindo á metade a súa "
 "velocidade de movemento e o dano que causan durante unha rolda."
 
 #: data/core/macros/special-notes.cfg:68
 msgid ""
 " The ability to turn the living to stone makes this unit extremely dangerous."
 msgstr ""
-" A habilidade de converter aos vivos en pedra fai que esta unidade resulte "
+" a habilidade de converter aos vivos en pedra fai que esta unidade resulte "
 "moi perigosa."
 
 #: data/core/macros/special-notes.cfg:71
@@ -5082,7 +5082,7 @@ msgid ""
 " This unit's marksmanship gives it a high chance of hitting targeted "
 "enemies, but only on the attack."
 msgstr ""
-" A puntería de esta unidade dálle unha alta probabilidade de atinar aos "
+" a puntería de esta unidade dálle unha alta probabilidade de atinar aos "
 "inimigos elixidos, pero só ao atacar."
 
 #: data/core/macros/special-notes.cfg:74
@@ -5090,7 +5090,7 @@ msgid ""
 " The unit has magical attacks, which always have a high chance of hitting an "
 "opponent."
 msgstr ""
-" A unidade ten ataques máxicos, que sempre teñen unha alta probabilidade de "
+" a unidade ten ataques máxicos, que sempre teñen unha alta probabilidade de "
 "acadar ao opoñente."
 
 #: data/core/macros/special-notes.cfg:77
@@ -5098,7 +5098,7 @@ msgid ""
 " The swarming attacks of this unit become less deadly whenever its members "
 "are wounded."
 msgstr ""
-" Os ataques en enxame desta unidade vólvense menos mortíferos cando os seus "
+" os ataques en enxame desta unidade vólvense menos mortíferos cando os seus "
 "membros están feridos."
 
 #: data/core/macros/special-notes.cfg:80
@@ -5106,7 +5106,7 @@ msgid ""
 " Using a charging attack doubles both damage dealt and received; this does "
 "not affect defensive retaliation."
 msgstr ""
-" Usar un ataque de carga duplica o dano inflixido e recibido. Isto non "
+" usar un ataque de carga duplica o dano inflixido e recibido. Isto non "
 "afecta aos ataques defensivos, en resposta a ataques inimigos."
 
 #: data/core/macros/special-notes.cfg:83
@@ -5114,7 +5114,7 @@ msgid ""
 " During battle, this unit can drain life from victims to renew its own "
 "health."
 msgstr ""
-" Durante a batalla, esta unidade pode absorber a vida das súas vítimas para "
+" durante a batalla, esta unidade pode absorber a vida das súas vítimas para "
 "renovar a súa propia saúde."
 
 #: data/core/macros/special-notes.cfg:86
@@ -5122,7 +5122,7 @@ msgid ""
 " The length of this unit's weapon allows it to strike first in melee, even "
 "in defense."
 msgstr ""
-" A lonxitude da arma desta unidade permítelle golpear primeiro nos "
+" a lonxitude da arma desta unidade permítelle golpear primeiro nos "
 "enfrontamentos corpo a corpo, incluso cando se defende."
 
 #: data/core/macros/special-notes.cfg:89
@@ -5130,7 +5130,7 @@ msgid ""
 " The victims of this unit's poison will continually take damage until they "
 "can be cured in town or by a unit which cures."
 msgstr ""
-" As vítimas do veleno desta unidade sufrirán dano continuamente ata que se "
+" as vítimas do veleno desta unidade sufrirán dano continuamente ata que se "
 "curen nunha vila ou unha unidade que poda as cure."
 
 #. [trait]: id=loyal
@@ -6583,7 +6583,7 @@ msgstr ""
 #. [tip]
 #: data/hardwired/tips.cfg:8 data/hardwired/tips.cfg:136
 msgid "- Great Mage Delfador, 516YW"
-msgstr "─ Gran mago Delfador, 516 a.W."
+msgstr "─ Gran mago Delfador, 516 d.W."
 
 #. [tip]
 #: data/hardwired/tips.cfg:11
