updated Italian translation
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42246 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-lib/it.po
+++ b/po/wesnoth-lib/it.po
@@ -4,13 +4,13 @@
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # Automatically generated, 2004.
-# Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008, 2009.
+# Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008, 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2009-12-29 12:44+0100\n"
+"PO-Revision-Date: 2010-04-24 13:23+0200\n"
 "Last-Translator: Luciano Montanaro <mikelima@cirulla.net>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -1644,7 +1644,7 @@ msgstr "Mostra tutti gli ingressi nella lobby"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Usa l'interfaccia della lobby"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1862,6 +1862,7 @@ msgstr "Non animare i movimenti delle unità dell'IA"
 #: src/game_preferences_display.cpp:343
 msgid "Sighting an allied unit interrupts your unit's movement"
 msgstr ""
+"L'avvistamento di un'unità alleata interrompe il movimento della tua unità"
 
 #: src/game_preferences_display.cpp:351
 msgid "Overlay a grid onto the map"
@@ -1901,6 +1902,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Usa la nuova interfaccia della lobby (funziona solo dopo una riconnessione "
+"manuale al server)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
@@ -2184,11 +2187,11 @@ msgstr "Sei entrato nella stanza $name"
 
 #: src/gui/dialogs/lobby_main.cpp:1400
 msgid "$player has entered the room"
-msgstr ""
+msgstr "$player è entrato nella stanza"
 
 #: src/gui/dialogs/lobby_main.cpp:1438
 msgid "$player has left the room"
-msgstr ""
+msgstr "$player ha lasciato la stanza"
 
 #: src/gui/dialogs/lobby_main.cpp:1551
 msgid "Password Required"
@@ -2467,7 +2470,7 @@ msgstr "Informazioni sulla mappa"
 
 #: src/hotkeys.cpp:117
 msgid "Swap fore- and background terrains"
-msgstr "Scambia i terrendi di sfondo e primo piano"
+msgstr "Scambia i terreni di sfondo e primo piano"
 
 #: src/hotkeys.cpp:118
 msgid "Next Tool"
