--- a/po/wesnoth/it.po
+++ b/po/wesnoth/it.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2010-01-30 11:50+0100\n"
+"PO-Revision-Date: 2010-04-24 12:31+0200\n"
 "Last-Translator: Luciano Montanaro <mikelima@cirulla.net>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -106,15 +106,13 @@ msgstr "Suoni nella lobby"
 
 #. [ai]: id=default # id is needed uniquely identify a MP AI, it is not needed in the scenario AI
 #: data/ai/ais/default_ai.cfg:4
-#, fuzzy
 msgid "Multiplayer_AI^Default AI"
-msgstr "Multigiocatore"
+msgstr "IA predefinita"
 
 #. [ai]: id=testing_ai_default
 #: data/ai/ais/testing_ai_default.cfg:5
-#, fuzzy
 msgid "Multiplayer_AI^RCA AI"
-msgstr "Multigiocatore"
+msgstr "IA RCA"
 
 #. [time]: id=underground
 #. [illuminated_time]: id=underground_illum
@@ -8705,6 +8703,8 @@ msgid ""
 "Unknown command '$command', try $help_command for a list of available "
 "commands."
 msgstr ""
+"Comando sconosciuto «$comando», usa $help_command per vedere l'elenco dei "
+"comandi disponibili."
 
 #: src/menu_events.cpp:1952
 msgid ""
@@ -8716,53 +8716,51 @@ msgstr ""
 
 #: src/menu_events.cpp:1954
 msgid "do not translate the 'all'^[all|<command>]"
-msgstr ""
+msgstr "[all|comando]"
 
 #: src/menu_events.cpp:1998
-#, fuzzy
 msgid "Error:"
-msgstr "Errore: "
+msgstr "Errore:"
 
 #: src/menu_events.cpp:2004
 msgid "Missing argument $arg_id"
-msgstr ""
+msgstr "Argomento mancante $arg_id"
 
 #: src/menu_events.cpp:2052
 msgid ""
 "Available commands $flags_description:\n"
 "$list_of_commands"
 msgstr ""
+"Comandi disponibili $flags_description:\n"
+"$list_of_commands"
 
 #: src/menu_events.cpp:2052 src/menu_events.cpp:2053 src/menu_events.cpp:2076
-#, fuzzy
 msgid "help"
-msgstr "Aiuto"
+msgstr "aiuto"
 
 #: src/menu_events.cpp:2053
 msgid "Type $help_command <command> for more info."
-msgstr ""
+msgstr "Scrivi $help_command <command> per maggiori informazioni."
 
 #: src/menu_events.cpp:2064
 msgid " No help available."
 msgstr " Nessun aiuto disponibile."
 
 #: src/menu_events.cpp:2069
-#, fuzzy
 msgid "Usage:"
-msgstr "Messaggio:"
+msgstr "Uso:"
 
 #: src/menu_events.cpp:2074
 msgid "aliases:"
-msgstr ""
+msgstr "alias:"
 
 #: src/menu_events.cpp:2200
 msgid "(A) - admin command"
-msgstr ""
+msgstr "(A) – command di amministrazione"
 
 #: src/menu_events.cpp:2207 src/menu_events.cpp:2405
-#, fuzzy
 msgid "(admin only)"
-msgstr "Solo squadra"
+msgstr "(solo ammin.)"
 
 #: src/menu_events.cpp:2227
 msgid ""
@@ -8784,7 +8782,7 @@ msgstr ""
 #: src/menu_events.cpp:2239 src/menu_events.cpp:2241 src/menu_events.cpp:2266
 #: src/menu_events.cpp:2268 src/menu_events.cpp:2270 src/menu_events.cpp:2284
 msgid "<nick>"
-msgstr ""
+msgstr "<nick>"
 
 #: src/menu_events.cpp:2234
 msgid "Unban a user. He does not have to be in the game but on the server."
@@ -8816,9 +8814,8 @@ msgid "Send a message to the server admins currently online"
 msgstr "Invia un messaggio agli amministratori del server attualmente in linea"
 
 #: src/menu_events.cpp:2255
-#, fuzzy
 msgid "<message>"
-msgstr "Messaggio:"
+msgstr "<messaggio>"
 
 #: src/menu_events.cpp:2255
 msgid "Send an emotion or personal action in chat."
@@ -8834,11 +8831,11 @@ msgstr ""
 
 #: src/menu_events.cpp:2260
 msgid "<nick> <message>"
-msgstr ""
+msgstr "<nick> <messaggio>"
 
 #: src/menu_events.cpp:2264
 msgid "<level> <domain>"
-msgstr ""
+msgstr "<livello> <dominio>"
 
 #: src/menu_events.cpp:2264
 msgid "Change the log level of a log domain."
@@ -8866,7 +8863,7 @@ msgstr "Mostra informazioni sulla versione."
 
 #: src/menu_events.cpp:2277
 msgid "<password> <email (optional)>"
-msgstr ""
+msgstr "<password> <email> (opzionale)>"
 
 #: src/menu_events.cpp:2277
 msgid "Register your nick"
@@ -8884,7 +8881,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2282
 msgid "<detail> <value>"
-msgstr ""
+msgstr "<dettaglio> <valore>"
 
 #: src/menu_events.cpp:2284
 msgid "Request information about a nick."
@@ -8898,7 +8895,7 @@ msgstr ""
 
 #: src/menu_events.cpp:2288 src/menu_events.cpp:2291 src/menu_events.cpp:2293
 msgid "<room>"
-msgstr ""
+msgstr "<stanza>"
 
 #: src/menu_events.cpp:2288
 msgid "Join a room."
@@ -8918,7 +8915,7 @@ msgstr "Elenca le stanze disponibili."
 
 #: src/menu_events.cpp:2297
 msgid "<room> <msg>"
-msgstr ""
+msgstr "<stanza> <msg>"
 
 #: src/menu_events.cpp:2297
 msgid "Room message."
@@ -8926,7 +8923,7 @@ msgstr "Messaggio della stanza."
 
 #: src/menu_events.cpp:2299
 msgid "<room> <type> [value]"
-msgstr ""
+msgstr "<stanza> <tipo> [valore]"
 
 #: src/menu_events.cpp:2299
 msgid "Room query."
@@ -8935,16 +8932,15 @@ msgstr "Interrogazione della stanza."
 #: src/menu_events.cpp:2397
 msgid "(D) - debug only, (N) - network only, (A) - admin only"
 msgstr ""
+"(D) - solo per debug, (N) - solo per rete, (A) - solo per amministratori"
 
 #: src/menu_events.cpp:2403
-#, fuzzy
 msgid "(debug command)"
-msgstr "Comandi di debug"
+msgstr "(comando di debug)"
 
 #: src/menu_events.cpp:2404
-#, fuzzy
 msgid "(network only)"
-msgstr "Giocatore remoto"
+msgstr "(solo per la rete)"
 
 #: src/menu_events.cpp:2429
 msgid "Refresh gui."
@@ -8956,11 +8952,11 @@ msgstr "Cambia il controllo di una fazione in/da IA."
 
 #: src/menu_events.cpp:2431
 msgid "do not translate the on/off^[<side> [on/off]]"
-msgstr ""
+msgstr "[<fazione> [on/off]]"
 
 #: src/menu_events.cpp:2434
 msgid "<side> <nick>"
-msgstr ""
+msgstr "<fazione> <nick>"
 
 #: src/menu_events.cpp:2434
 msgid "Assign control of a side to a different player or observer."
@@ -8976,9 +8972,8 @@ msgid "Visualize the screen refresh procedure."
 msgstr "Mostra la procedura di aggiornamento dello schermo."
 
 #: src/menu_events.cpp:2439
-#, fuzzy
 msgid "Show fps."
-msgstr "Mostra replay"
+msgstr "Mostra FPS."
 
 #: src/menu_events.cpp:2441
 msgid "Save game."
@@ -9002,7 +8997,7 @@ msgstr "Disabilita i salvataggi automatici."
 
 #: src/menu_events.cpp:2454
 msgid "<id>"
-msgstr ""
+msgstr "<id>"
 
 #: src/menu_events.cpp:2454
 msgid "Advance to the next scenario, or scenario identified by 'id'"
@@ -9026,7 +9021,7 @@ msgstr "Esegui un'istruzione Lua."
 
 #: src/menu_events.cpp:2466
 msgid "<command>[;<command>...]"
-msgstr ""
+msgstr "<comando>[;<comando>...]"
 
 #: src/menu_events.cpp:2466
 msgid "Set the command used by the custom command hotkey"
@@ -9038,7 +9033,7 @@ msgstr "Avvia l'ispettore dello stato della partita"
 
 #: src/menu_events.cpp:2470
 msgid "<name>[=<command>]"
-msgstr ""
+msgstr "<nome>[=<comando>]"
 
 #: src/menu_events.cpp:2470
 msgid "Set or show alias to a command"
@@ -9046,7 +9041,7 @@ msgstr "Mostra e imposta un alias per un comando"
 
 #: src/menu_events.cpp:2472
 msgid "<var>=<value>"
-msgstr ""
+msgstr "<var>=<valore>"
 
 #: src/menu_events.cpp:2472
 msgid "Set a scenario variable."
@@ -9054,7 +9049,7 @@ msgstr "Imposta una variabile dello scenario."
 
 #: src/menu_events.cpp:2474
 msgid "<var>"
-msgstr ""
+msgstr "<var>"
 
 #: src/menu_events.cpp:2474
 msgid "Show a scenario variable."
@@ -9118,11 +9113,11 @@ msgstr "Impostato il dominio: «$domain» al livello «$level»."
 
 #: src/menu_events.cpp:2635
 msgid "whisper to $receiver"
-msgstr ""
+msgstr "sussurra a $receiver"
 
 #: src/menu_events.cpp:2642
 msgid "whisper: $sender"
-msgstr ""
+msgstr "sussurro: $sender"
 
 #: src/menu_events.cpp:2738 src/menu_events.cpp:2757
 #: src/multiplayer_connect.cpp:699
@@ -9130,39 +9125,32 @@ msgid "(empty)"
 msgstr "(vuoto)"
 
 #: src/menu_events.cpp:2738 src/menu_events.cpp:2744 src/menu_events.cpp:2794
-#, fuzzy
 msgid "ignores list"
-msgstr "Sull'elenco degli utenti da ignorare"
+msgstr "elenco di utenti da ignorare"
 
 #: src/menu_events.cpp:2744
-#, fuzzy
 msgid "Added to ignore list: $nick"
-msgstr "Aggiunto all'elenco degli utenti da ignorare:"
+msgstr "Aggiunto all'elenco di utenti da ignorare: $nick"
 
 #: src/menu_events.cpp:2747 src/menu_events.cpp:2766
-#, fuzzy
 msgid "Invalid username: $nick"
-msgstr "Nome utente non valido: "
+msgstr "Nome utente non valido: $nick"
 
 #: src/menu_events.cpp:2757 src/menu_events.cpp:2764 src/menu_events.cpp:2790
-#, fuzzy
 msgid "friends list"
-msgstr "Sull'elenco degli amici"
+msgstr "elenco degli amici"
 
 #: src/menu_events.cpp:2764
-#, fuzzy
 msgid "Added to friends list: $nick"
-msgstr "Aggiunto all'elenco degli amici: "
+msgstr "Aggiunto all'elenco degli amici: $nick"
 
 #: src/menu_events.cpp:2780
-#, fuzzy
 msgid "Removed from list: $nick"
-msgstr "Rimosso dall'elenco: "
+msgstr "Rimosso dall'elenco: $nick"
 
 #: src/menu_events.cpp:2780 src/menu_events.cpp:2798
-#, fuzzy
 msgid "friends and ignores list"
-msgstr "Sull'elenco degli utenti da ignorare"
+msgstr "elenco di anici e utenti da ignorare"
 
 #: src/menu_events.cpp:2798
 msgid "There are no players on your friends or ignore list."
@@ -9170,35 +9158,33 @@ msgstr ""
 "Non ci sono giocatori negli elenchi degli amici o degli utenti da ignorare."
 
 #: src/menu_events.cpp:2803
-#, fuzzy
 msgid "version"
-msgstr "Versione"
+msgstr "versione"
 
 #: src/menu_events.cpp:2819
 msgid "registering with password *** and no email address"
-msgstr ""
+msgstr "registrazione con password *** e nessun indirizzo di posta elettronica"
 
 #: src/menu_events.cpp:2823
 msgid "registering with password *** and email address $email"
-msgstr ""
+msgstr "registrazione con password *** e indirizzo di posta $email"
 
 #: src/menu_events.cpp:2826 src/menu_events.cpp:2837 src/menu_events.cpp:2855
 #: src/menu_events.cpp:2869
 msgid "nick registration"
-msgstr ""
+msgstr "registrazione nick"
 
 #: src/menu_events.cpp:2837
 msgid "dropping your username"
-msgstr ""
+msgstr "scarto del tuo nome utente"
 
 #: src/menu_events.cpp:2855
 msgid "setting $var to $value"
-msgstr ""
+msgstr "impostazione di $var a $value"
 
 #: src/menu_events.cpp:2869
-#, fuzzy
 msgid "requesting information for user $nick"
-msgstr "Richiedi informazioni su un nome utente."
+msgstr "richiesta di informazioni sull'utente $nick."
 
 #: src/menu_events.cpp:2981
 msgid "Couldn't find label or unit containing the string '$search'."
@@ -9239,23 +9225,23 @@ msgstr "Modalità di debug disattivata!"
 
 #: src/menu_events.cpp:3224
 msgid "Variable not found"
-msgstr ""
+msgstr "Variabile non trovata"
 
 #: src/menu_events.cpp:3262
 msgid ""
 "Invalid alignment: '$alignment', needs to be one of lawful, neutral or "
 "chaotic."
 msgstr ""
+"Allineamento non valido: «$alignment», deve essere uno di legale, neutrale o "
+"caotico."
 
 #: src/menu_events.cpp:3319
-#, fuzzy
 msgid "Invalid unit type"
-msgstr "Nome di etichetta non valido"
+msgstr "Tipo di unità non valido"
 
 #: src/menu_events.cpp:3332
-#, fuzzy
 msgid "Invalid location"
-msgstr "Colore non valido"
+msgstr "Posizione non valida"
 
 #: src/menu_events.cpp:3368
 msgid "ai"
@@ -9295,11 +9281,11 @@ msgstr ""
 
 #: src/multiplayer.cpp:169
 msgid "Server-side redirect loop"
-msgstr "Reindirizzamento ridondante da parte del server"
+msgstr "Ciclo di eeindirizzamenti sul server"
 
 #: src/multiplayer.cpp:257
 msgid "Bad data received from server"
-msgstr ""
+msgstr "Dati non validi ricevuti dal server"
 
 #: src/multiplayer.cpp:298
 msgid "You must login first."
@@ -9607,9 +9593,8 @@ msgid "Invalid era selected"
 msgstr "Selezionata un'era non valida."
 
 #: src/multiplayer_create.cpp:333
-#, fuzzy
 msgid "The map is invalid."
-msgstr "La partita è finita."
+msgstr "La mappa non è valida."
 
 #: src/multiplayer_create.cpp:335
 msgid "You must enter a name."
@@ -9723,9 +9708,8 @@ msgid "Friends in Game"
 msgstr "Amici nella partita"
 
 #: src/multiplayer_lobby.cpp:738
-#, fuzzy
 msgid "Filter:"
-msgstr "Filtro: "
+msgstr "Filtro:"
 
 #: src/multiplayer_lobby.cpp:747
 msgid "Skip quickly to the active turn when observing"
@@ -9983,17 +9967,12 @@ msgstr[1] ""
 "minimo iniziale, se è di più."
 
 #: src/playsingle_controller.cpp:255
-#, fuzzy
 msgid ""
 "You will start the next scenario with the defined minimum starting gold."
 msgid_plural ""
 "You will start the next scenario with the defined minimum starting gold."
-msgstr[0] ""
-"Inizierai il prossimo scenario con un capitale di $gold moneta, o con l'oro "
-"minimo iniziale, se è di più."
-msgstr[1] ""
-"Inizierai il prossimo scenario con un capitale di $gold monete, o con l'oro "
-"minimo iniziale, se è di più."
+msgstr[0] "Inizierai il prossimo scenario con l'oro minimo iniziale."
+msgstr[1] "Inizierai il prossimo scenario con l'oro minimo iniziale."
 
 #: src/playsingle_controller.cpp:263
 msgid ""
