--- a/po/wesnoth-did/it.po
+++ b/po/wesnoth-did/it.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2009-11-21 15:36+0300\n"
+"PO-Revision-Date: 2010-04-24 12:40+0200\n"
 "Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "MIME-Version: 1.0\n"
@@ -58,9 +58,8 @@ msgstr "Invocatore"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Livello intermedio, 11 scenari)\n"
+msgstr "(Livello intermedio, 11 scenari)"
 
 #. [campaign]: id=Descent_Into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
