updated Slovak translation
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42256 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-ei/sk.po
+++ b/po/wesnoth-ei/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2010-03-15 23:24+0100\n"
+"PO-Revision-Date: 2010-04-25 21:26+0100\n"
 "Last-Translator: Viliam Búr <viliam@bur.sk>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -1626,7 +1626,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Možno zomrie a ja vyhrám našu bitku bez boja."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
