--- a/po/wesnoth-lib/sk.po
+++ b/po/wesnoth-lib/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.2\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-04-15 22:12+0100\n"
+"PO-Revision-Date: 2010-04-25 20:57+0100\n"
 "Last-Translator: aceman <acelists@atlas.sk>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -1640,7 +1640,7 @@ msgstr "Ukázať všetky príchody do čakárne"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Použiť nový vzhľad čakárne"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1890,6 +1890,7 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Použiť nový vzhľad čakárne (funguje až po opätovnom pripojení k serveru)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
