--- a/po/wesnoth-sotbe/sk.po
+++ b/po/wesnoth-sotbe/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.2-CVS\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-12 13:09+0200\n"
-"PO-Revision-Date: 2010-04-17 14:24+0100\n"
+"PO-Revision-Date: 2010-04-25 22:17+0100\n"
 "Last-Translator: Martin Plavala <martin@komplet.sk>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -3172,9 +3172,8 @@ msgstr "Trpaslíčie stanovisko"
 
 #. [side]: type=Bandit, id=Sagmar
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:87
-#, fuzzy
 msgid "Sagmar"
-msgstr "Sam"
+msgstr "Sagmar"
 
 #. [part]
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/13_Dwarvish_Stand.cfg:98
@@ -4179,7 +4178,6 @@ msgstr "Stojte! Čo sa to tu deje?"
 
 #. [message]: speaker=Earl Lanbec'h
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/17_Human_Horde.cfg:679
-#, fuzzy
 msgid ""
 "Howgarth? You and your interfering alliance always show up at the worst "
 "possible time."
