hungarian translation update
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@42257 75b3775d-3801-0410-9e12-e2e43121521d

--- a/po/wesnoth-lib/hu.po
+++ b/po/wesnoth-lib/hu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: hu-lib_1.5\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-04-24 10:49+0200\n"
-"PO-Revision-Date: 2010-04-13 21:13+0200\n"
+"PO-Revision-Date: 2010-04-25 08:58+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
@@ -1645,7 +1645,7 @@ msgstr "Értesítés akkor, ha új játékos lép a játékcsarnokba"
 
 #: src/game_preferences_display.cpp:169
 msgid "Use new lobby interface"
-msgstr ""
+msgstr "Az új játékcsarnok felületének használata"
 
 #: src/game_preferences_display.cpp:170
 msgid "Sort Lobby List"
@@ -1907,6 +1907,8 @@ msgid ""
 "mouseover^Use new lobby interface (only works after a manual reconnect to "
 "the server)"
 msgstr ""
+"Az új játékcsarnok felületének használata (csak a kiszolgálóhoz való "
+"újracsatlakozás után működik)"
 
 #: src/game_preferences_display.cpp:373
 msgid "Find and set path to MP server to host LAN games."
