--- a/po/wesnoth-multiplayer/hu.po
+++ b/po/wesnoth-multiplayer/hu.po
@@ -5,13 +5,13 @@
 #
 # Széll Tamás <tomi@digiflex.hu>, 2005.
 # Máthé katalin <katkadu@gmail.com>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008., 2009.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008., 2009, 2010.
 msgid ""
 msgstr ""
 "Project-Id-Version: hu-multiplayer\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-04-23 23:46+0200\n"
-"PO-Revision-Date: 2009-10-17 22:04+0200\n"
+"POT-Creation-Date: 2010-04-24 10:49+0200\n"
+"PO-Revision-Date: 2010-04-25 09:39+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
@@ -845,7 +845,7 @@ msgstr ""
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:5
 msgid "2p - Elensefar Courtyard"
-msgstr ""
+msgstr "2j - Elensefar kertje"
 
 #. [multiplayer]: id=multiplayer_elensefar_courtyard
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:7
@@ -853,11 +853,13 @@ msgid ""
 "Fight through corridors and gardens, and dominate the eastern courtyard of "
 "what used to be the glorious city of Elensefar."
 msgstr ""
+"Harcolj ligetekben, sétányokon át, és szerezd meg a kert keleti részét, mely "
+"egykor Elensefar dicső városa volt."
 
 #. [time]: id=underground_illum
 #: data/multiplayer/scenarios/2p_Elensefar_Courtyard.cfg:111
 msgid "Underground"
-msgstr ""
+msgstr "Föld alatt"
 
 #. [multiplayer]: id=multiplayer_Fallenstar_Lake
 #: data/multiplayer/scenarios/2p_Fallenstar_Lake.cfg:5
