--- a/po/wesnoth-ei/hu.po
+++ b/po/wesnoth-ei/hu.po
@@ -7,14 +7,14 @@
 # Széll Tamás <tomi@digiflex.hu>, 2004.
 # Kékkői László <rakesh@axelero.hu>, 2005.
 # Németh Tamás <ntomasz@mail.kabelnet.hu>, 2008.
-# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009.
+# Kádár-Németh Krisztián <krisztian.kad@gmail.com>, 2008, 2009, 2010.
 # Kelemen Zoltán <kelemen_zoltan@freemail.hu>, 2008, 2009.
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-ei 1.4 branch\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-04-24 10:36+0200\n"
-"PO-Revision-Date: 2009-10-20 23:10+0200\n"
+"POT-Creation-Date: 2010-04-24 10:49+0200\n"
+"PO-Revision-Date: 2010-04-25 08:50+0200\n"
 "Last-Translator: Kádár-Németh Krisztián <krisztian.kad@gmail.com>\n"
 "Language-Team: Hungarian <wesnoth-hungtrans@gna.org>\n"
 "MIME-Version: 1.0\n"
@@ -1674,7 +1674,7 @@ msgstr ""
 #. [message]: speaker=Wak-Rano
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:134
 msgid "Perhaps he will die, and I will win our battle without fighting."
-msgstr ""
+msgstr "Talán elpusztul és így csata nélkül győzhetünk."
 
 #. [message]: speaker=Mal-Arnai
 #: data/campaigns/Eastern_Invasion/scenarios/06.Two_Paths.cfg:138
